--- a/aboutus.html
+++ b/aboutus.html
@@ -1,55 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Guru Gear</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <!-- Navigation Bar -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>Guru Gear - About Us</title>
+
+    <!-- Typekit (Acme Gothic) -->
+    <link rel="stylesheet" href="https://use.typekit.net/xaz2qyi.css" />
+    <!-- Main Stylesheet -->
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <!-- Mint Header with Hamburger Nav -->
     <header>
-        <ul>
-            <li><a href="index.html"><strong>Home</strong></a></li>
-            <li><a href="aboutus.html" class="active"><strong>About Us</strong></a></li>
-            <li><a href="shop.html"><strong>Shop</strong></a></li>
-            <li><a href="contactus.html"><strong>Contact Us</strong></a></li>
-            <li><a href="cart.html" class="cart" style="font-size: 1.5em;">🛒</a></li>
-            <img class="logonotext" src="images/GuruGearNoText.png" alt="GuruGear Logo">
+      <div class="navbar">
+        <input type="checkbox" id="menu-toggle" />
+        <label class="hamburger" for="menu-toggle">&#9776;</label>
+
+        <ul class="navmenu">
+          <li>
+            <a href="index.html"><strong>Home</strong></a>
+          </li>
+          <li>
+            <a href="aboutus.html"><strong>About Us</strong></a>
+          </li>
+          <li>
+            <a href="shop.html"><strong>Shop</strong></a>
+          </li>
+          <li>
+            <a href="reviews.html"><strong>Reviews</strong></a>
+          </li>
+          <li>
+            <a href="contactus.html"><strong>Contact Us</strong></a>
+          </li>
+          <li><a href="cart.html" style="font-size: 1.5em">🛒</a></li>
+
+          <li>
+            <img class="logonotext" src="images/GuruGearNoText.png" alt="Guru Gear logo no text" />
+          </li>
         </ul>
+      </div>
     </header>
 
-    <!-- About Us Section -->
+    <!-- About Section -->
     <section class="about-section">
-        <div class="about-container">
-            <div class="about-leaf"><img class= "leafleft" src="images/leafleft.png" alt="leafleft">
-                <h1>About Us</h1>
-                <img class= "leafright" src="images/leafright.png" alt="leafright">
-            </div>
-            <p>
-                Welcome to <strong>Guru Gear</strong>, your ultimate destination for stylish and comfortable yoga clothing.
-                We create apparel designed to empower your practice, inspire movement, and promote mindfulness.
-            </p>
-            <hr class="about-line">
-            <p>
-                At <strong>Guru Gear</strong>, we blend fashion with functionality, ensuring that our high-quality, sustainable fabrics 
-                enhance your yoga journey. Whether you're stretching on the mat or embracing a mindful lifestyle, 
-                our designs reflect harmony, creativity, and the drive to thrive.
-            </p>
-            <hr class="about-line">
-            <p>
-                Join us in celebrating mindful living while contributing to a sustainable and conscious future. 
-                Every piece is crafted with care, allowing you to flow effortlessly through your yoga practice and beyond.
-            </p>
-            <hr class="about-line">
-        </div>
+      <h1>About Guru Gear</h1>
+      <p>
+        At Guru Gear, we’re passionate about creating high-quality, eco-conscious apparel for yoga
+        and meditation enthusiasts around the world. Our brand was founded on the principle that
+        sustainable fashion can be both stylish and accessible.
+      </p>
+
+      <hr class="about-line" />
+
+      <p>
+        We source fair-trade materials and work with ethical factories across three continents to
+        ensure our products positively impact local communities. Join us in embracing mindful
+        living—on and off the mat!
+      </p>
     </section>
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2025 Guru Gear. All Rights Reserved.</p>
+      <p>&copy; 2025 Guru Gear. All Rights Reserved.</p>
     </footer>
 
+    <!-- JavaScript -->
     <script src="index.js"></script>
-</body>
+    <script src="cart.js"></script>
+  </body>
 </html>
