--- a/cart.html
+++ b/cart.html
@@ -1,38 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping Cart</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="cart.js"></script>
-</head>
-<body>
-    <header class="shop-header">
-        <ul>
-            <li><a href="index.html"><strong>Home</strong></a></li>
-            <li><a href="aboutus.html"><strong>About Us</strong></a></li>
-            <li><a href="shop.html"><strong>Shop</strong></a></li>
-            <li><a href="contactus.html"><strong>Contact Us</strong></a></li>
-            <a href="cart.html" style="font-size: 1.5em;">🛒 (<span id="cart-count">0</span>)</a>
-        </ul>
-    </header>
-    
-    <div class="cart-container">
-        <h2>Your Cart</h2>
-        <div id="cart-items"></div>
-        <div class="cart-total">
-            <h3>Total: $<span id="cart-total">0.00</span></h3>
-        </div>
-        <button id="checkout-button">Checkout</button>
-    </div>
+document.addEventListener('DOMContentLoaded', function () {
+  // Load the cart array from localStorage or empty if none
+  let cart = JSON.parse(localStorage.getItem('cart')) || [];
 
-    <footer class="footer">
-        <p>&copy; 2025 Guru Gear. All Rights Reserved.</p>
-    </footer>
+  // Grab DOM elements
+  const cartItemsContainer = document.getElementById('cart-items');
+  const cartTotalElement = document.getElementById('cart-total');
+  const cartCountElement = document.getElementById('cart-count');
+  // If you want to display item count in the nav
 
-    <script src="index.js"></script>
-</body>
-</html>
+  // Display the cart items & total
+  function displayCart() {
+    cartItemsContainer.innerHTML = '';
+    let total = 0;
 
+    cart.forEach((item, index) => {
+      // Create container for each cart item
+      const itemDiv = document.createElement('div');
+      itemDiv.classList.add('cart-item');
 
+      // Product image
+      const img = document.createElement('img');
+      img.src = item.image;
+      img.alt = item.name;
+
+      // Info container
+      const infoDiv = document.createElement('div');
+      infoDiv.innerHTML = `
+          <h4>${item.name}</h4>
+          <p>$${item.price.toFixed(2)}</p>
+        `;
+
+      // Remove button
+      const removeBtn = document.createElement('button');
+      removeBtn.textContent = 'Remove';
+      removeBtn.addEventListener('click', () => {
+        removeItem(index);
+      });
+
+      // Build the item row
+      itemDiv.appendChild(img);
+      itemDiv.appendChild(infoDiv);
+      itemDiv.appendChild(removeBtn);
+
+      // Add to container
+      cartItemsContainer.appendChild(itemDiv);
+
+      // Update total
+      total += item.price;
+    });
+
+    // Update total display
+    cartTotalElement.textContent = total.toFixed(2);
+
+    // Update nav count
+    if (cartCountElement) {
+      cartCountElement.textContent = cart.length;
+    }
+  }
+
+  // Remove an item by its index in array
+  function removeItem(index) {
+    cart.splice(index, 1);
+    localStorage.setItem('cart', JSON.stringify(cart));
+    displayCart();
+  }
+
+  // On page load
+  displayCart();
+});
