--- a/contactus.html
+++ b/contactus.html
@@ -1,62 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guru Gear</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-        <!-- Nav Menu -->
-	<header>
-        <link rel="stylesheet" href="https://use.typekit.net/xaz2qyi.css">
-		<ul>
-                <li><a href="index.html"><strong>Home</strong></a></li>
-                <li><a href="aboutus.html"><strong>About Us</strong></a></li>
-                <li><a href="shop.html"><strong>Shop</strong></a></li>
-				<li><a href="contactus.html"><strong>Contact Us</strong></a></li>
-                <li><a href="cart.html" class="cart" style="font-size: 1.5em;">🛒</a></li>
-                <img class="logonotext" src="images/GuruGearNoText.png" alt="GuruGearlogonotext" />
-                
-      	</ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>Guru Gear - Contact Us</title>
 
-    <header class="shop-header">
-        <h1>Contact Us</h1>
+    <!-- Typekit (Acme Gothic) -->
+    <link rel="stylesheet" href="https://use.typekit.net/xaz2qyi.css" />
+    <!-- Main Stylesheet -->
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <!-- Hamburger Header -->
+    <header>
+      <div class="navbar">
+        <input type="checkbox" id="menu-toggle" />
+        <label class="hamburger" for="menu-toggle">&#9776;</label>
+
+        <ul class="navmenu">
+          <li>
+            <a href="index.html"><strong>Home</strong></a>
+          </li>
+          <li>
+            <a href="aboutus.html"><strong>About Us</strong></a>
+          </li>
+          <li>
+            <a href="shop.html"><strong>Shop</strong></a>
+          </li>
+          <li>
+            <a href="reviews.html"><strong>Reviews</strong></a>
+          </li>
+          <li>
+            <a href="contactus.html"><strong>Contact Us</strong></a>
+          </li>
+          <li><a href="cart.html" style="font-size: 1.5em">🛒</a></li>
+
+          <li>
+            <img class="logonotext" src="images/GuruGearNoText.png" alt="Guru Gear logo no text" />
+          </li>
+        </ul>
+      </div>
     </header>
 
+    <!-- Page Header -->
+    <div class="shop-header">
+      <h1>Contact Us</h1>
+    </div>
+
+    <!-- Main Content -->
     <main>
-        <section class="contact-info">
-            <h2>Get in Touch</h2>
-            <p>If you have any questions or need assistance, feel free to reach out.</p>
-            <ul>
-                <li><strong>Email:</strong> <a href="mailto:gurugear@gmail.com">gurugear@gmail.com</a></li>
-                <li><strong>Customer Support:</strong> <a href="tel:+1234567890">+1 (234) 567-890</a></li>
-            </ul>
-        </section>
+      <section class="contact-info">
+        <h2>Get in Touch</h2>
+        <p>If you have any questions or need assistance, feel free to reach out.</p>
+        <ul>
+          <li>
+            <strong>Email:</strong>
+            <a href="mailto:gurugear@gmail.com">gurugear@gmail.com</a>
+          </li>
+          <li>
+            <strong>Customer Support:</strong>
+            <a href="tel:+1234567890">+1 (234) 567-890</a>
+          </li>
+        </ul>
+      </section>
 
-        <section class="contact-form">
-            <h2>Send Us a Message</h2>
-            <form action="#" method="POST">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
+      <section class="contact-form">
+        <h2>Send Us a Message</h2>
+        <form action="#" method="POST">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required />
 
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required />
 
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" rows="5" required></textarea>
 
-                <button type="submit">Send Message</button>
-            </form>
-        </section>
+          <button type="submit">Send Message</button>
+        </form>
+      </section>
     </main>
 
-</body>
-</html>
-
+    <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2025 Guru Gear. All Rights Reserved.</p>
+      <p>&copy; 2025 Guru Gear. All Rights Reserved.</p>
     </footer>
+
+    <!-- JavaScript -->
     <script src="index.js"></script>
-</body>
+    <script src="cart.js"></script>
+  </body>
 </html>
