--- a/reviews.html
+++ b/reviews.html
@@ -1,29 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guru Gear</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-        <!-- Nav Menu -->
-	<header>
-        <link rel="stylesheet" href="https://use.typekit.net/xaz2qyi.css">
-		<ul>
-                <li><a href="index.html"><strong>Home</strong></a></li>
-                <li><a href="aboutus.html"><strong>About Us</strong></a></li>
-                <li><a href="shop.html"><strong>Shop</strong></a></li>
-                <li><a href="reviews.html"><strong>Reviews</strong></a></li>
-				<li><a href="contactus.html"><strong>Contact Us</strong></a></li>
-                <a href="#" style="font-size: 1.5em;">🛒</a>
-                <img class="logonotext" src="images/GuruGearNoText.png" alt="GuruGearlogonotext" />
-                
-      	</ul>
-	</header>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>Guru Gear - Reviews</title>
+
+    <!-- Typekit (Acme Gothic) -->
+    <link rel="stylesheet" href="https://use.typekit.net/xaz2qyi.css" />
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <!-- Single Header with Hamburger Nav -->
+    <header>
+      <div class="navbar">
+        <input type="checkbox" id="menu-toggle" />
+        <label class="hamburger" for="menu-toggle">&#9776;</label>
+
+        <ul class="navmenu">
+          <li>
+            <a href="index.html"><strong>Home</strong></a>
+          </li>
+          <li>
+            <a href="aboutus.html"><strong>About Us</strong></a>
+          </li>
+          <li>
+            <a href="shop.html"><strong>Shop</strong></a>
+          </li>
+          <li>
+            <a href="reviews.html"><strong>Reviews</strong></a>
+          </li>
+          <li>
+            <a href="contactus.html"><strong>Contact Us</strong></a>
+          </li>
+          <li><a href="cart.html" style="font-size: 1.5em">🛒</a></li>
+
+          <li>
+            <img class="logonotext" src="images/GuruGearNoText.png" alt="Guru Gear logo no text" />
+          </li>
+        </ul>
+      </div>
+    </header>
+
+    <!-- Page Title -->
+    <div class="shop-header">
+      <h1>Reviews</h1>
+    </div>
+
+    <!-- Main Content (sample) -->
+    <main style="max-width: 600px; margin: 40px auto; text-align: center">
+      <p>
+        This is where you can display customer testimonials, star ratings, or links to your
+        products’ reviews. Stay tuned!
+      </p>
+    </main>
+
+    <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2025 Guru Gear. All Rights Reserved.</p>
+      <p>&copy; 2025 Guru Gear. All Rights Reserved.</p>
     </footer>
-</body>
+
+    <!-- JavaScript -->
+    <script src="index.js"></script>
+    <script src="cart.js"></script>
+  </body>
 </html>
