--- a/cart.html
+++ b/cart.html
@@ -1,70 +1,69 @@
-document.addEventListener('DOMContentLoaded', function () {
-  // Load the cart array from localStorage or empty if none
-  let cart = JSON.parse(localStorage.getItem('cart')) || [];
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>Shopping Cart</title>
 
-  // Grab DOM elements
-  const cartItemsContainer = document.getElementById('cart-items');
-  const cartTotalElement = document.getElementById('cart-total');
-  const cartCountElement = document.getElementById('cart-count');
-  // If you want to display item count in the nav
+    <!-- Typekit -->
+    <link rel="stylesheet" href="https://use.typekit.net/xaz2qyi.css" />
+    <!-- Main Stylesheet -->
+    <link rel="stylesheet" href="styles.css" />
 
-  // Display the cart items & total
-  function displayCart() {
-    cartItemsContainer.innerHTML = '';
-    let total = 0;
+    <!-- cart.js loaded after DOM is ready (defer) -->
+    <script defer src="cart.js"></script>
+  </head>
+  <body>
+    <!-- Hamburger Header -->
+    <header>
+      <div class="navbar">
+        <input type="checkbox" id="menu-toggle" />
+        <label class="hamburger" for="menu-toggle">&#9776;</label>
 
-    cart.forEach((item, index) => {
-      // Create container for each cart item
-      const itemDiv = document.createElement('div');
-      itemDiv.classList.add('cart-item');
+        <ul class="navmenu">
+          <li>
+            <a href="index.html"><strong>Home</strong></a>
+          </li>
+          <li>
+            <a href="aboutus.html"><strong>About Us</strong></a>
+          </li>
+          <li>
+            <a href="shop.html"><strong>Shop</strong></a>
+          </li>
+          <li>
+            <a href="reviews.html"><strong>Reviews</strong></a>
+          </li>
+          <li>
+            <a href="contactus.html"><strong>Contact Us</strong></a>
+          </li>
+          <li>
+            <!-- We can show item count in parentheses -->
+            <a href="cart.html" style="font-size: 1.5em">🛒 (<span id="cart-count">0</span>)</a>
+          </li>
 
-      // Product image
-      const img = document.createElement('img');
-      img.src = item.image;
-      img.alt = item.name;
+          <li>
+            <img class="logonotext" src="images/GuruGearNoText.png" alt="Guru Gear logo no text" />
+          </li>
+        </ul>
+      </div>
+    </header>
 
-      // Info container
-      const infoDiv = document.createElement('div');
-      infoDiv.innerHTML = `
-          <h4>${item.name}</h4>
-          <p>$${item.price.toFixed(2)}</p>
-        `;
+    <div class="cart-container">
+      <h2>Your Cart</h2>
+      <div id="cart-items"></div>
+      <div class="cart-total">
+        <h3>Total: $<span id="cart-total">0.00</span></h3>
+      </div>
+      <button id="checkout-button">Checkout</button>
+    </div>
 
-      // Remove button
-      const removeBtn = document.createElement('button');
-      removeBtn.textContent = 'Remove';
-      removeBtn.addEventListener('click', () => {
-        removeItem(index);
-      });
+    <!-- Footer -->
+    <footer class="footer">
+      <p>&copy; 2025 Guru Gear. All Rights Reserved.</p>
+    </footer>
 
-      // Build the item row
-      itemDiv.appendChild(img);
-      itemDiv.appendChild(infoDiv);
-      itemDiv.appendChild(removeBtn);
-
-      // Add to container
-      cartItemsContainer.appendChild(itemDiv);
-
-      // Update total
-      total += item.price;
-    });
-
-    // Update total display
-    cartTotalElement.textContent = total.toFixed(2);
-
-    // Update nav count
-    if (cartCountElement) {
-      cartCountElement.textContent = cart.length;
-    }
-  }
-
-  // Remove an item by its index in array
-  function removeItem(index) {
-    cart.splice(index, 1);
-    localStorage.setItem('cart', JSON.stringify(cart));
-    displayCart();
-  }
-
-  // On page load
-  displayCart();
-});
+    <!-- JavaScript -->
+    <script src="index.js"></script>
+    <script src="cart.js"></script>
+  </body>
+</html>
