--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <div class="hero-right">
         <h2>New Arrivals</h2>
         <div class="model-images">
-          <img src="images/model1.jpg" alt="Model 1" />
-          <img src="images/model2.jpg" alt="Model 2" />
+          <img src="images/sherbet cross over crop tank.jpg" alt="Model 1" />
+          <img src="images/grey double strap midi bra.webp" alt="Model 2" />
         </div>
         <a href="shop.html" class="shop-btn">Shop Here</a>
       </div>
